# noctua

./: .gitignore  README.md  pyproject.toml  start.sh
backend/: main.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: MainChat.tsx  MessageRenderer.tsx  SidebarLeft.tsx  SidebarRight.tsx
noctua/agents/: ask.py  chat.py  common.py  editor.py  exercise_agent.py  flashcard_agent.py  guide.py  recall_agent.py
noctua/cli/: chat.py  config.py  io.py  main.py  make.py  recall.py  search.py  utils.py
noctua/core/: config.py  learning_parser.py  recall.py
noctua/mcp/: __init__.py  structure_server.py  vault_server.py
noctua/rag/: engine.py
noctua/utils/: fs.py  models.py  ui.py
obx/agents/: chat.py  common.py
obx/mcp/: google_scholar_server.py
